making about to footer section responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header secondary-bg">
+    <header class="header secondary-bg hide">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -40,7 +40,7 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-bg">
+        <section class="about secondary-bg ">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
                 simple, clean and slick websites that provide real value to the end user. Thousands of clients have
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume">
+        <section class="resume ">
             <h3 class="section-title text-center">A summary of My Resume</h3>
             <div class="resume-container">
                 <!-- .resume-colum*2>h3.resume-colum-title+experience*3>h4.experience-title+h5.experience-subtitle+.experience-description -->
@@ -162,7 +162,7 @@
             </div>
         </section>
     </main>
-    <footer class="secondary-bg">
+    <footer class="secondary-bg ">
         <div class="footer-colum">
             <h3 class="section-title">Lets Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
